Fixed: Photo credit overlap scrolled header

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -108,12 +108,13 @@ a {
   color: $header-heading-color;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
-  box-shadow: 0px 0px 2px #292E38;
+  box-shadow: 0px 1px 2px #292E38;
   display: none;
   text-align: left;
   position: fixed;
   width: 100%;
-  padding: 0.5rem 2rem 1rem 2rem;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  z-index: 1;
 
 }
 
